--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,3 @@
+service: fast-api
 runtime: python38
-entrypoint: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app
+entrypoint: gunicorn -k uvicorn.workers.UvicornWorker main:app
